<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fadeGreen"
    tools:context=".checklist.ChecklistActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Receipt List"
        android:textColor="@color/black"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginRight="5pt"
        android:hint="Name"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/editText"
        android:hint="Price"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#c24081"
            android:text="Add"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="#c24081"
            android:text="Delete"
            android:textAllCaps="true"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="#c24081"
            android:text="Clear"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#c24081"
            android:text="DONE"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:gravity="center"
        android:padding="10dp"
        android:text="My Receipt List"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/textView1"
        android:layout_marginTop="0dp"
        android:choiceMode="multipleChoice" />

</RelativeLayout>